--- a/Vite_Component/src/select.module.css
+++ b/Vite_Component/src/select.module.css
@@ -73,6 +73,12 @@
   cursor: pointer;
 }
 
-.option.highlighter {
+.option.selected {
   background-color: hsl(200, 100%, 70%);
 } 
+
+.option.highlighted {
+  background-color: hsl(200, 100%, 50%);
+  color: white;
+} 
+
